t p# This is a combination of 2 commits.
chore: base queues

chore: queue consumer e producer e message broker rabbitmqoptions

--- a/src/RabbitMQ.Infra.CrossCutting.IoC/RabbitMQ.Infra.CrossCutting.IoC.csproj
+++ b/src/RabbitMQ.Infra.CrossCutting.IoC/RabbitMQ.Infra.CrossCutting.IoC.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RabbitMQ.Consumer.Domain\RabbitMQ.Domain.csproj" />
+    <ProjectReference Include="..\RabbitMQ.Infra.MessageBroker\RabbitMQ.Infra.MessageBroker.csproj" />
   </ItemGroup>
 
 </Project>
