--- a/src/Infra/RabbitMQ.Infra.CrossCutting.IoC/RabbitMQ.Infra.CrossCutting.IoC.csproj
+++ b/src/Infra/RabbitMQ.Infra.CrossCutting.IoC/RabbitMQ.Infra.CrossCutting.IoC.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\RabbitMQ.Domain\RabbitMQ.Domain.csproj" />
     <ProjectReference Include="..\RabbitMQ.Infra.MessageBroker\RabbitMQ.Infra.MessageBroker.csproj" />
   </ItemGroup>
 
